<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.Someone117.backup.MainActivity">
    <AutoCompleteTextView
            android:text="@string/server_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/disk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="16dp"
            android:hint="@string/server_location"/>
    <TextView
            android:text="@string/ssh_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="72dp"/>
    <TextView
            android:text="@string/ssh_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="72dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Backup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/button"
            app:layout_constraintVertical_bias="0.957"
    />
    <AutoCompleteTextView
            android:text="@string/ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/ipAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:minHeight="48dp"
            android:hint="@string/ip_address"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="8dp"
            />
    <AutoCompleteTextView
            android:text="@string/ssh_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/sshUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"
            />
    <AutoCompleteTextView
            android:text="@string/network_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/ssid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:minHeight="48dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            />
    <TextView
            android:text="@string/ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.07" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="72dp"
    />
    <TextView
            android:text="@string/network_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:layout_marginTop="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ssid"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/ssh_password"
            android:id="@+id/password"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:minHeight="48dp" android:autofillHints=""
            android:textColorHint="#757575"/>

</androidx.constraintlayout.widget.ConstraintLayout>